force-app/main/default/objects/Competitor__c/fields/Competitor_Tracked__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Tracked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Competitor Tracked</label>
    <type>Checkbox</type>
</CustomField>