force-app/main/default/objects/Competitor__c/fields/Deal_Closed__c.field-meta.xml
<CustomField>
    <fullName>Deal_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deal Closed</label>
    <type>Checkbox</type>
</CustomField>