force-app/main/default/objects/Competitor__c/fields/Lost_to_another_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Lost_to_another_Competitor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lost to another Competitor</label>
    <type>Checkbox</type>
</CustomField>