force-app/main/default/objects/Competitor__c/fields/Tracked_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Tracked_Opportunity__c</fullName>
    <label>Tracked Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Competitors</relationshipLabel>
    <relationshipName>Competitors</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>