force-app/main/default/objects/Competitor__c/fields/Won_against_this_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Won_against_this_Competitor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Won against this Competitor</label>
    <type>Checkbox</type>
</CustomField>